--- a/angular-HolaMundo/src/app/saludador/saludador.component.html
+++ b/angular-HolaMundo/src/app/saludador/saludador.component.html
@@ -1,1 +1,7 @@
-<p>Hola mundo</p>
+<div class="container content">
+    <div class="row">
+        <div class="col-md-6">
+            Hola mundo soy santiago
+        </div>
+    </div>
+</div>
