--- a/angular-WishList/src/app/destino-viaje/destino-viaje.component.html
+++ b/angular-WishList/src/app/destino-viaje/destino-viaje.component.html
@@ -1,13 +1,24 @@
-<div class="col-md-4">
-    <div class="card-content">
-        <div class="card-img">
-            <img src="https://placeimg.com/380/230/nature" alt="">
-            <span><h4>heading</h4></span>
-        </div>
-        <div class="card-desc">
-            <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis voluptas totam</p>
-            <a href="#" class="btn-card">Read</a>
-        </div>
+<div class="card-content">
+    <div class="card-img">
+        <img src="https://placeimg.com/380/230/nature" alt="">
+        <span><h4>{{position}}</h4></span>
+    </div>
+    <div class="card-desc">
+        <h3>{{destino.nombre}}</h3>
+        <p>Servicios</p>
+        <ul>
+            <li *ngFor="let s of destino.servicios">
+                <span [ngSwitch]="s">
+                  <i *ngSwitchCase="'desayuno'" style="color: red">{{s}}</i>
+                  <i *ngSwitchDefault>{{s}}</i>
+                </span>
+            </li>
+        </ul>
+        <a href="#" class="btn-card" (click)="ir()">Ir Destino</a>
+        <!-- <span [style.display]="destino.isSelected()? '':'none'">-PREFERIDO-</span> -->
+        <span *ngIf="destino.isSelected()">-PREFERIDO-</span>
+        <!-- <span *ngIf="destino.isSelected()">
+          <span ngNonBindable> {{PREFERIDO}}</span>
+        </span> -->
     </div>
 </div>
