Uso de inyeccion de independencias

--- a/angular-WishList/src/app/destino-viaje/destino-viaje.component.html
+++ b/angular-WishList/src/app/destino-viaje/destino-viaje.component.html
@@ -1,7 +1,7 @@
 <div class="card-content">
     <div class="card-img">
         <img src="https://placeimg.com/380/230/nature" alt="">
-        <span><h4>{{position}}</h4></span>
+        <span><h4>{{destino.nombre}}</h4></span>
     </div>
     <div class="card-desc">
         <h3>{{destino.nombre}}</h3>
@@ -20,5 +20,6 @@
         <!-- <span *ngIf="destino.isSelected()">
           <span ngNonBindable> {{PREFERIDO}}</span>
         </span> -->
+        <a [routerLink]="['/destino']">Ver detalle</a>
     </div>
 </div>
