--- a/angular-WishList/src/app/app.component.html
+++ b/angular-WishList/src/app/app.component.html
@@ -1,8 +1,19 @@
 <div class="container content">
-    <div class="row">
-        <h1>
-            {{title}}
-        </h1>
-    </div>
-    <app-lista-destinos></app-lista-destinos>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" [routerLink]="['/home']">WishList</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['/home']">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['/destino']">Destino</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <router-outlet></router-outlet>
 </div>
