--- a/angular-WishList/src/app/form-destino-viaje/form-destino-viaje.component.html
+++ b/angular-WishList/src/app/form-destino-viaje/form-destino-viaje.component.html
@@ -2,10 +2,11 @@
     <div class="form-group">
         <label for="nombre">Nombre</label>
         <input type="text" class="form-control" id="nombre" placeholder="Ingresar nombre" [formControl]="fg.controls['nombre']">
+        <div *ngIf="!fg.controls['nombre'].hasError('minLongNombre')">Nombre debe tener al menos {{minLongitud}} de largo!</div>
     </div>
     <div class=" form-group">
         <label for="Imagen Url">Imagen Url</label>
         <input type="text" class="form-control" id="imagenUrl" placeholder="Ingresar url" [formControl]="fg.controls['url']">
     </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
+    <button type="submit" class="btn btn-primary" *ngIf="fg.valid">Guardar</button>
 </form>
