--- a/angular-WishList/src/app/form-destino-viaje/form-destino-viaje.component.html
+++ b/angular-WishList/src/app/form-destino-viaje/form-destino-viaje.component.html
@@ -2,6 +2,9 @@
     <div class="form-group">
         <label for="nombre">Nombre</label>
         <input type="text" class="form-control" id="nombre" placeholder="Ingresar nombre" [formControl]="fg.controls['nombre']">
+        <ul>
+            <li *ngFor="let r of searchResults">{{r}}</li>
+        </ul>
         <div *ngIf="!fg.controls['nombre'].hasError('minLongNombre')">Nombre debe tener al menos {{minLongitud}} de largo!</div>
     </div>
     <div class=" form-group">
