Integracion con redux

--- a/angular-WishList/src/app/destino-viaje/destino-viaje.component.html
+++ b/angular-WishList/src/app/destino-viaje/destino-viaje.component.html
@@ -14,12 +14,22 @@
                 </span>
             </li>
         </ul>
+        <div class="row row flex">
+            <a href="#" (click)="voteUp()" appTrackearClick data-trackear-tags="destino_vote_up lista_destinos_item">
+                <i class="material-icons md-18">thumb_up</i>
+            </a>
+            &nbsp;
+            <a href="#" (click)="voteDown()" appTrackearClick data-trackear-tags="destino_vote_down lista_destinos_item">
+                <i class="material-icons md-18">thumb_down</i>
+            </a>
+            &nbsp; Votos: {{destino.votes}}
+        </div>
         <a href="#" class="btn-card" (click)="ir()">Ir Destino</a>
         <!-- <span [style.display]="destino.isSelected()? '':'none'">-PREFERIDO-</span> -->
         <span *ngIf="destino.isSelected()">-PREFERIDO-</span>
         <!-- <span *ngIf="destino.isSelected()">
           <span ngNonBindable> {{PREFERIDO}}</span>
         </span> -->
-        <a [routerLink]="['/destino']">Ver detalle</a>
+        <a [routerLink]="['/destino', destino.id]">Ver detalle</a>
     </div>
 </div>
