--- a/angular-WishList/src/app/lista-destinos/lista-destinos.component.html
+++ b/angular-WishList/src/app/lista-destinos/lista-destinos.component.html
@@ -17,8 +17,7 @@
     <hr class="mb-5">
 
     <div class="row row-flex">
-        <app-destino-viaje *ngFor="let d of destinosApiClient.getAll(); let x=index " [destino]="d" [idx]="x+1"
-            (clicked)="elegido($event)">
+        <app-destino-viaje *ngFor="let d of all; let x=index " [destino]="d" [idx]="x+1" (clicked)="elegido($event)">
         </app-destino-viaje>
     </div>
 </div>
