--- a/angular-WishList/src/app/app.component.html
+++ b/angular-WishList/src/app/app.component.html
@@ -2,8 +2,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" [routerLink]="['/home']">WishList</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <span class="navbar-toggler-icon"></span>
+    </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -15,6 +15,18 @@
             </ul>
         </div>
     </nav>
+
+    <div style="float: right;">
+        <select (change)="translate.use($event.target.value)">
+      <option value="es">Español</option>
+      <option value="fr">France</option>
+      <option value="en">English</option>
+    </select>
+    </div>
+
+    <h1>
+        {{title}} <b>[innerHTL]="Hola | translate"</b>
+    </h1>
 
     <router-outlet></router-outlet>
 </div>
