Despliegue en circle ci

--- a/angular-WishList/src/app/Components/destino-viaje/destino-viaje.component.html
+++ b/angular-WishList/src/app/Components/destino-viaje/destino-viaje.component.html
@@ -1,4 +1,4 @@
-<div class="card-content">
+<div class="card-content" [@esFavorito]="destino.isSelected() ? 'estadoFavorito' : 'estadoNoFavorito'">
     <div class="card-img">
         <img src="https://placeimg.com/380/230/nature" alt="">
         <span><h4>{{destino.nombre}}</h4></span>
@@ -15,16 +15,16 @@
             </li>
         </ul>
         <div class="row row flex">
-            <a href="#" (click)="voteUp()" appTrackearClick data-trackear-tags="destino_vote_up lista_destinos_item">
+            <a href="#" (click)="voteUp()" appTrackerarClick data-trackear-tags="destino_vote_up lista_destinos_item">
                 <i class="material-icons md-18">thumb_up</i>
             </a>
             &nbsp;
-            <a href="#" (click)="voteDown()" appTrackearClick data-trackear-tags="destino_vote_down lista_destinos_item">
+            <a href="#" (click)="voteDown()" appTrackerarClick data-trackear-tags="destino_vote_down lista_destinos_item">
                 <i class="material-icons md-18">thumb_down</i>
             </a>
             &nbsp; Votos: {{destino.votes}}
         </div>
-        <a href="#" class="btn-card" (click)="ir()">Ir Destino</a>
+        <a href="#" class="btn-card" (click)="ir()" appTrackerarClick data-trackear-tags="destino_vote_up lista_destinos_item">Ir Destino</a>
         <!-- <span [style.display]="destino.isSelected()? '':'none'">-PREFERIDO-</span> -->
         <span *ngIf="destino.isSelected()">-PREFERIDO-</span>
         <!-- <span *ngIf="destino.isSelected()">
